--- a/Code/FT1.html
+++ b/Code/FT1.html
@@ -2,24 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="FT1.css">
-    <script type="text/javascript" src="jquery.js"></script>
+    <link rel="stylesheet" href="libraries/normalize.css">
+    <link rel="stylesheet" href="style/FT1.css">
+    <script type="text/javascript" src="libraries/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>Single Page</title>
   </head>
   <body>
     <p class="maClass">Je suis un p avec la class "MaClass"</p>
-    <embed src="audio.mp3" width="0" height="0" autostart="true" loop="true"/>
+    <embed src="medias/audio.mp3" width="0" height="0" autostart="true" loop="true"/>
     <div id="page1">
       <h1>T.I.M.E STORIES</h1>
       <div class="bouton">
         <a href="#page5"> En savoir plus </a>
       </div>
       <div class="scroll">
-        <img class="infinite_loop" src="scroll.svg" alt="fleche">
+        <img class="infinite_loop" src="images/scroll.svg" alt="fleche">
       </div>
     </div>
     <div id="page2">
@@ -51,15 +50,15 @@
     </div>
     <div id="page7">
       <div id="icones">
-        <img src="social-services.png" alt="social">
-        <img src="12.png" alt="age">
+        <img src="images/social-services.png" alt="social">
+        <img src="images/12.png" alt="age">
       </div>
     </div>
     <div id="page8">
       <h1> N'attendez plus </h1>
       <div class="buy">
         <a href="#">
-          <img src="bag.png" alt="bag"/>
+          <img src="images/bag.png" alt="bag"/>
         </a>
       </div>
     </div>
@@ -67,22 +66,22 @@
       <div id="icons">
         <div class="single_icon">
           <a href="#">
-            <img src="facebook-2.png" alt="fb"/>
+            <img src="images/facebook-2.png" alt="fb"/>
           </a>
         </div>
         <div class="single_icon">
           <a href="#">
-            <img src="twitter.png" alt="tw"/>
+            <img src="images/twitter.png" alt="tw"/>
           </a>
         </div>
         <div class="single_icon">
           <a href="#">
-            <img src="email.png" alt="mail"/>
+            <img src="images/email.png" alt="mail"/>
           </a>
         </div>
         <div class="single_icon">
           <a href="#">
-            <img src="youtube.png" alt="yt"/>
+            <img src="images/youtube.png" alt="yt"/>
           </a>
         </div>
       </div>
@@ -93,5 +92,5 @@
     </div>
 
   </body>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </html>
